--- a/styles/poestyles.css
+++ b/styles/poestyles.css
@@ -51,7 +51,7 @@ color: #ede8e3;
 }
 
 body {
-/*max-width: 60em;*/
+max-width: 60em;
 margin: 0 auto 0 auto;
 padding: 0;
 /*border-style: dotted;*/
